--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,18 @@ logging.level.root=DEBUG
 ##server.port=9091
 #server.port=5000
 
-#spring.datasource.url=jdbc:mysql://mytestdb.c5i4wkkmmcgg.us-east-1.rds.amazonaws.com/mydb
+spring.datasource.url=jdbc:mysql://mytestdb.c5i4wkkmmcgg.us-east-1.rds.amazonaws.com/mydb
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=admin
-#spring.datasource.password=myTESTDB#1034
+spring.datasource.username=admin
+spring.datasource.password=myTESTDB#1034
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
